[package]
name = "frp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
futures = "0.3"
parking_lot = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
take_mut = "0.2.2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] } 
